--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
+archivesBaseName = project.mod_id + "-fabric"
+version = project.minecraft_version + "-" + project.mod_version
 group = project.maven_group
 
 dependencies {
@@ -21,10 +21,15 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
-	modApi "me.sargunvohra.mcmods:autoconfig1u:3.2.2"
-	include "me.sargunvohra.mcmods:autoconfig1u:3.2.2"
+	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+
+	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 	
-	modImplementation "io.github.prospector:modmenu:1.14.6+build.31"
+	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
+
+	modRuntime "io.github.ultimateboomer:smoothboot-fabric:${project.smoothboot_version}"
 }
 
 processResources {
