--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,20 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.7
-	loader_version=0.9.3+build.207
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
 
 # Mod Properties
-	mod_version = 1.0.1
-	maven_group = com.ultimateboomer
-	archives_base_name = ublowfire-1.16
+mod_version=1.0.1
+mod_id=lowfire
+maven_group=io.github.ultimateboomer
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.20.2+build.402-1.16
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.29.2+1.16
+cloth_config_version=4.8.3
+auto_config_version=3.3.1
+mod_menu_version=1.14.6+build.31
+smoothboot_version=1.16.4-1.4.0
