--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ archivesBaseName = project.mod_id + "-fabric"
 version = project.minecraft_version + "-" + project.mod_version
 group = project.maven_group
 
+repositories {
+	maven { url 'https://jitpack.io' }
+	maven { url "https://maven.terraformersmc.com" }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -19,17 +24,9 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
-	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
-	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
-	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
-	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
-	
-	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
-
-	modRuntime "io.github.ultimateboomer:smoothboot-fabric:${project.smoothboot_version}"
+	modRuntime "com.github.ultimateboomer:mc-smoothboot:${project.smoothboot_version}"
 }
 
 processResources {
