--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.5
+loader_version=0.11.3
 
 # Mod Properties
 mod_version=1.0.1
@@ -14,8 +14,6 @@ maven_group=io.github.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.29.2+1.16
-cloth_config_version=4.8.3
-auto_config_version=3.3.1
-mod_menu_version=1.14.6+build.31
-smoothboot_version=1.16.4-1.4.0
+fabric_version=0.32.0+1.16
+mod_menu_version=1.16.8
+smoothboot_version=1.16.5-1.6.0
