--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-# check these on https://fabricmc.net/use
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.8
+minecraft_version=1.18.1
+
+parchment_version=2022.03.06
+
+# Buildscript
+forgegradle_version=5.1.+
+mixingradle_version=0.7-SNAPSHOT
+librarian_version=1.+
 
 # Mod Properties
 mod_version=2.0.1
@@ -13,7 +16,4 @@ mod_id=lowfire
 maven_group=io.github.ultimateboomer
 
 # Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.44.0+1.18
-mod_menu_version=3.0.0
-smoothboot_version=1.18-1.7.0
+forge_version=39.1.0
