--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,11 +2,11 @@ modLoader="javafml" #mandatory
 loaderVersion="[39,)"
 license="MIT"
 [[mods]]
-modId="${mod_id}"
+modId="lowfire"
 version="${file.jarVersion}"
 displayName="Low Fire"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/low-fire"
-logoFile="assets/lowfire/icon.png"
+logoFile="icon.png"
 authors="UltimateBoomer"
 description='''
 Reduce first-person rendered fire height.
