--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -13,6 +13,7 @@ group = project.maven_group
 repositories {
 	maven { url 'https://jitpack.io' }
 	maven { url "https://maven.terraformersmc.com" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -25,8 +26,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-
-//	modRuntime "com.github.ultimateboomer:mc-smoothboot:${project.smoothboot_version}"
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
 }
 
 processResources {
