--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.8
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.6
 
 # Mod Properties
 mod_version=2.0.1
@@ -14,6 +14,6 @@ maven_group=io.github.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.44.0+1.18
-mod_menu_version=3.0.0
-smoothboot_version=1.18-1.7.0
+fabric_version=0.55.1+1.19
+mod_menu_version=4.0.0
+cloth_config_version=7.0.72
